4/60 JavaScript Fundamentals Bangla Tutorial (Display Possibilities) – Part:04 Program Completed

--- a/Part-03.html
+++ b/Part-03.html
@@ -12,21 +12,19 @@
 		</div>
 		<div class="maincontent">
 			<script>
-				var myname = "Syed Zaman Mostafiz.";
-				document.write("My Name is "+myname);
+				var color = "Green";
+				//var color = "Blue";
+				function functionone()
+				{
+					window.color = "Yellow";
+					document.write("Inside Function Color is "+color);
+				}
+				functionone();
 				document.write("<br/>");
-				var a = 10;
-				var b = 10;
-				var sum = a+b;
-				var sub = a-b;
-				var mul = a*b;
-				var div = a/b;
-				document.write("Sum is = "+sum+" And Multi is = "+mul);
+				document.write("Outside Function Color is "+color);
 			
 			</script>
-			<br><a href="Part-03.html">Part-03 Click Here</a>
-
-	
+			<br><a href="Part-04.html">Part-04 Click Here</a>
 		</div>
 
 		<div class="footer">
