11/60 JavaScript Fundamentals Bangla Tutorial (Repetition Statement) – Part:11

--- a/Part-06.html
+++ b/Part-06.html
@@ -11,21 +11,23 @@
 			<h2><script>document.write("Tutorials JavaScript Fundamentals")</script></h2>
 		</div>
 		<div class="maincontent">
-			<div id="show"></div>
 			<script>
-				//innerHTML, document.write(), window.alert(), console.log
-				var a = "Syed Zaman ";
-				var b = "Mostafiz";
-				var myname = a+b;
-				document.getElementById("show").innerHTML = myname;
-				document.write(myname);
-				window.alert(myname);
-				console.log(myname);
-				
+                //Zaman Web Developer
+				console.time("Check Time");
+
+				console.log("Syed Zaman Mostafiz");
+				console.info("$s","You have a nice Information");
+				console.warn("Do you go here ......");
+				console.error("It is Undefined ........");
+				var sum = 5+2;
+				console.log(sum);
+
+				console.timeEnd("Check Time");
+
 				
 			
 			</script>
-			<br><a href="Part-06.html">Part-06 Click Here</a>
+			<br><a href="Part-07.html">Part-07 Click Here</a>
 		</div>
 
 		<div class="footer">
