--- a/Part-10.html
+++ b/Part-10.html
@@ -11,21 +11,19 @@
 			<h2><script>document.write("Tutorials JavaScript Fundamentals")</script></h2>
 		</div>
 		<div class="maincontent">
-			<div id="show"></div>
 			<script>
-				//innerHTML, document.write(), window.alert(), console.log
-				var a = "Syed Zaman ";
-				var b = "Mostafiz";
-				var myname = a+b;
-				document.getElementById("show").innerHTML = myname;
-				document.write(myname);
-				window.alert(myname);
-				console.log(myname);
-				
-				
-			
+				var x = 123456789;
+				var x = "Syed Zaman Mostafiz";
+				var x = new String("Syed Zaman Mostafiz");
+				var x = {name: "Zaman", age: 29};
+				var x = true;
+				var x = false;
+				var x = [1,2,3,4];
+				var x = null;
+				var x ;
+				document.write(typeof (x));
 			</script>
-			<br><a href="Part-06.html">Part-06 Click Here</a>
+			<br><a href="Part-11.html">Part-11 Click Here</a>
 		</div>
 
 		<div class="footer">
