--- a/Part-11.html
+++ b/Part-11.html
@@ -11,21 +11,20 @@
 			<h2><script>document.write("Tutorials JavaScript Fundamentals")</script></h2>
 		</div>
 		<div class="maincontent">
-			<div id="show"></div>
 			<script>
-				//innerHTML, document.write(), window.alert(), console.log
-				var a = "Syed Zaman ";
-				var b = "Mostafiz";
-				var myname = a+b;
-				document.getElementById("show").innerHTML = myname;
-				document.write(myname);
-				window.alert(myname);
-				console.log(myname);
-				
-				
-			
+				document.write("For Loop<br>");
+				for (i=1; i<=10; i++){
+				    document.write("2*"+i+"="+2*i+"<br>");
+				}
+                document.write("While Loop<br>");
+				var i =0;
+				while (true){
+				    if (i==10){break}
+				    i++
+				    document.write(i+") Syed Zaman Mostafiz<br>");
+				}
 			</script>
-			<br><a href="Part-06.html">Part-06 Click Here</a>
+			<br><a href="Part-11.html">Part-11 Click Here</a>
 		</div>
 
 		<div class="footer">
