14/60 JavaScript Fundamentals Bangla Tutorial (Get Text from Container) – Part:14 Completed.

--- a/Part-11.html
+++ b/Part-11.html
@@ -23,8 +23,26 @@
 				    i++
 				    document.write(i+") Syed Zaman Mostafiz<br>");
 				}
+                document.write("Do While Loop<br>");
+                var i =10;
+                do {
+					document.write(i+"<br>");
+                }
+                while (i<10);
+                document.write("<br>For Loop in Array<br>");
+                var i=0;
+                var color = ["Blue", "Green", "Yellow", "Purple"];
+                for (i in color){
+                    document.write(color[i]+"<br>");
+				}
+                document.write("<br>For Loop in Object<br>");
+                var i=0;
+                var obj = {a:1,b:2,c:3};
+                for (i in obj){
+                    document.write(obj[i]+"<br>");
+                }
 			</script>
-			<br><a href="Part-11.html">Part-11 Click Here</a>
+			<br><a href="Part-12.html">Part-12 Click Here</a>
 		</div>
 
 		<div class="footer">
