15/60 JavaScript Fundamentals Bangla Tutorial (this keyword) – Part:15 Completed.

--- a/Part-15.html
+++ b/Part-15.html
@@ -15,9 +15,16 @@
 			<hr>
 			<script>
 				function ZamanWebDeveloper() {
-					alert(this);
+					var a= 200;
+					this.x=300;
+					this.y=400;
+					this.z= function(){
+					 	return this.x+this.y;
+					}
                 }
-                ZamanWebDeveloper();
+
+                var lp = new ZamanWebDeveloper();
+				document.write(lp.z());
 			</script>
 			<br><a href="Part-15.html">Part-15 Click Here</a>
 		</section>
