--- a/Part-21.html
+++ b/Part-21.html
@@ -12,18 +12,14 @@
 		</header>
 		<section class="maincontent">
 			<script>
-				function totalNum(a,b) {
-					this.x=a;
-					this.y=b;
-					this.sum= function(){
-					 	return this.x+this.y;
-					}
+				function revMe(s) {
+				    return s.split("").reverse().join("");
                 }
-
-                var tn = new totalNum(10,5);
-				document.write(tn.sum());
+                var x = "A B C D";
+				var rv = revMe(x);
+				document.write(rv);
 			</script>
-			<br><a href="Part-17.html">Part-17 Click Here</a>
+			<br><a href="Part-21.html">Part-21 Click Here</a>
 		</section>
 
 		<footer class="footer">
