23/60 JavaScript Fundamentals Bangla Tutorial (Make a Countdown) – Part:23 Completed.

--- a/Part-21.2.html
+++ b/Part-21.2.html
@@ -12,14 +12,19 @@
 		</header>
 		<section class="maincontent">
 			<script>
-				function revMe(s) {
-				    return s.split("").reverse().join("");
+				String.prototype.revMe = function () {
+					var s = "";
+					var i = this.length;
+					while (i>0){
+					    s+=this.substring(i-1,i);
+					    i--;
+					}
+					return s;
                 }
                 var x = "A B C D";
-				var rv = revMe(x);
-				document.write(rv);
+				document.write(x.revMe());
 			</script>
-			<br><a href="Part-21.2.html">Part-21.2 Click Here</a>
+			<br><a href="Part-22.html">Part-22 Click Here</a>
 		</section>
 
 		<footer class="footer">
