48/60 JavaScript Fundamentals Bangla Tutorial (Regular Expressions: IV)–Part:48 Program Completed.

--- a/Part-45.html
+++ b/Part-45.html
@@ -12,15 +12,10 @@
 		</header>
 		<section class="maincontent">
 			<script type="text/javascript">
-				var str = "Zaman Web Developer";
-				var B64 = btoa(str);
-				document.write(B64);
-                document.write("<br>");
-
-                var decode = atob(B64);
-				document.write(decode);
+				var re = /ab+c/;
+				var re = new RegExp("ab+c");
 			</script>
-			<br><a href="Part-45.html">Part-45 Click Here</a>
+			<br><a href="Part-46.html">Part-46 Click Here</a>
 		</section>
 
 		<footer class="footer">
