--- a/Part-49.html
+++ b/Part-49.html
@@ -11,16 +11,12 @@
 			<h2><script>document.write("Tutorials JavaScript Fundamentals")</script></h2>
 		</header>
 		<section class="maincontent">
+			<div id="show"></div>
 			<script type="text/javascript">
-				var str = "Zaman Web Developer";
-				var B64 = btoa(str);
-				document.write(B64);
-                document.write("<br>");
+				document.write("To know more javascript regular expression Search This keyword in Google.");
 
-                var decode = atob(B64);
-				document.write(decode);
 			</script>
-			<br><a href="Part-45.html">Part-45 Click Here</a>
+			<br><a href="Part-49.html">Part-49 Click Here</a>
 		</section>
 
 		<footer class="footer">
