--- a/Part-53.html
+++ b/Part-53.html
@@ -17,21 +17,19 @@
 						<td><input type="text" name="inputbox"></td>
 					</tr>
 					<tr>
-						<td><input type="button" value="Click" name="button" onclick="testResult(this.form)"></td>
+						<td><input type="button" value="Click" name="button" onclick="testResult()"></td>
 					</tr>
 				</table>
 			</form>
 
 			<script type="text/javascript">
-				function validateEmail() {
-					var getEmail = document.getElementById("getValue");
-					var email = getEmail.value;
-					var emailRegEx =/([a-zA-Z0-9_\-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([a-zA-Z0-9\-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})/;
-					getEmail.style.color = "white";
-					if (emailRegEx.test(email)){
-					    getEmail.style.backgroundColor = "green";
-					}else {
-                        getEmail.style.backgroundColor = "pink";
+				function testResult() {
+				    var testVar = myform.inputbox.value;
+				    if (testVar == ""){
+				        alert("Please type something ....");
+					}
+					else {
+                        alert("Your Type is "+testVar);
 					}
                 }
 
